--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html><head>
-<meta http-equiv="refresh" content="0.2;url=https://123.sogou.com/?22415-7686">
+<meta></meta>
 <title></title>
 </head>
 <body>
+  my web page
 </body></html>
