--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title></title>
 </head>
 <body>
-  <div style="display:none;inline">
+  <div>
   <iframe height="100" width=100% src="https://yeah.qq.com/?q=157686"></iframe>
   </div>
 </body></html>
